# ds-aa-mdg-monitoring

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_monitor_imerg.yml
email_assets/templates/: base.html  informational.html
notebooks/: bubbles_template.ipynb  bubbles_template.md  wind_exposure.ipynb  wind_exposure.md
pipelines/: monitor_imerg.py
src/: constants.py
src/datasources/: meteofr.py  polygon.py
src/email/: plotting.py
src/monitoring/: emails.py  plotting.py
src/utils/: blob_utils.py  db_utils.py  exposure.py
