[project]
name = "ds-aa-mdg-monitoring"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "azure-storage-blob==12.22.0",
    "html2text==2024.2.26",
    "jinja2==3.1.6",
    "matplotlib==3.10.0",
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
    "ocha-stratus==0.1.7",
    "scipy==1.17.0",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
